<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ncopado.memoria.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_gravity="center"
        android:textSize="20dp"
        
      />

    
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"/>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"/>

      <Button
        android:id="@+id/btnGurdarPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_prefe"
          android:onClick="guardarPeferencia"
        />


    <Button
        android:id="@+id/btnMostrarPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mostrarr_prefe"
        android:onClick="mostrarPeferencia"
        />

    <Button
        android:id="@+id/btnGurdar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:onClick="generarArchivo"
        />


    <TextView
        android:id="@+id/tvPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
</LinearLayout>
